# proyecto-de-software

./: .gitignore  README.md
admin/: README.md  pyproject.toml  requirements.txt
admin/src/core/: database.py  google.py  jwt.py  seeds.py
admin/src/core/models/: __init__.py  base_model.py  comment_model.py  config_model.py  institution_model.py  permission_model.py  request_model.py  request_status_change_model.py  request_status_model.py  role_model.py  service_model.py  type_model.py  user_model.py
admin/src/web/: __init__.py  config.py  error.py
admin/src/web/api/controllers/: auth_api_controller.py  contact_api_controller.py  institution_api_controller.py  service_api_controller.py  state_api_controller.py  stats_api_controller.py  user_api_controller.py
admin/src/web/api/helpers/: validations.py
admin/src/web/controllers/: auth_controller.py  config_controller.py  google_auth_controller.py  inst_controller.py  institutions_controller.py  role_controller.py  service_controller.py  service_request_controller.py  user_controller.py
admin/src/web/helpers/: __init__.py  auth.py  session.py  tokens.py  validations.py
admin/src/web/schemas/: comment.py  institution.py  request.py  request_status.py  request_status_change.py  service.py  type.py  user.py
admin/src/web/templates/: complete_registration.html.jinja  config.html.jinja  email.html.jinja  error.html.jinja  home.html.jinja  layout.html.jinja  register_user.html.jinja
admin/src/web/templates/auth/: login.html.jinja
admin/static/: home.css  layout.css  login.css
portal/: index.html  (+2 more)
(+33 files in other folders)
